Resolves: tdf#93317 Modified Document Dialog misses focus on Gtk3

Change-Id: I16ddac82a76a1e665797e4be192d3642f2660d9f